2013-03-28  James Hunt  <james.hunt@ubuntu.com>

	* scripts/upstart-monitor.py: on_button_press_event():
	  Handle path_info being None (LP: #1161098).
	* extra/upstart-event-bridge.c: main():
	  - Handle daemon pidfile as the upstart-event-bridge does.
	  - Write to stdout, not syslog.

2013-03-25  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/socket-event.7: Correct section number.
	* init/man/init.5: Correct section number.

2013-03-22  James Hunt  <james.hunt@ubuntu.com>

	* scripts/Makefile.am: Added missing entry for
	  man/upstart-monitor.8.

2013-03-22  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.8

2013-03-22  James Hunt  <james.hunt@ubuntu.com>

	* scripts/initctl2dot.py:
	  - footer(): Add details of session.
	  - sanitise(): Handle jobs in sub-directories.
	  - main(): Add --user and --system options and determine
	    correct session to connect to.
	* scripts/man/initctl2dot.8:
	  - Added --user and --system options.
	  - Escape dashes in options.
	  - Update date.

2013-03-21  James Hunt  <james.hunt@ubuntu.com>

	* po/POTFILES.in:
	  - Added missing entries for init/quiesce.c and init/state.c.
	  - Added upstart-monitor.py.
	* scripts/upstart-monitor.py: UpstartEventsGui(): Removed class
	  attributes and added explicit instance ones in __init__().

2013-03-18  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Added scripts/data/Makefile.
	* scripts/Makefile.am: Added SUBDIRS=data.
	* scripts/data/Makefile.am: New Makefile.
	* scripts/data/upstart-monitor.desktop: Desktop file for
	  upstart-monitor.

2013-03-15  James Hunt  <james.hunt@ubuntu.com>

	* extra/upstart-file-bridge.c:
	  - main(): String safety for home_dir.
	  - job_add_file():
	    - Initialise events.
	    - Use nih_strdup() rather than arrays for paths.
	    - Removed unecessary error label.
	  - {create_handler,modify_handler,delete_handler}(): Remove strcpy().
	  - watched_dir_new(): Use nih_strdup() rather than arrays for path.