@@ -87,7 +87,6 @@ typedef enum job_process_error_type {
 	JOB_PROCESS_ERROR_SETUID,
 	JOB_PROCESS_ERROR_SETGID,
 	JOB_PROCESS_ERROR_CHOWN,
-	JOB_PROCESS_ERROR_OPENPT_MASTER,
 	JOB_PROCESS_ERROR_UNLOCKPT,
 	JOB_PROCESS_ERROR_GRANTPT,
 	JOB_PROCESS_ERROR_PTSNAME,
